# wasmdb

./: Cargo.toml  README.md
src/: bindings.rs  engine.rs  host.wit  main.rs
src/adapters/: http.rs
src/builtin_modules/hello/: Cargo.toml
src/builtin_modules/hello/src/: main.rs
src/engine/: bindings.rs  datastore.rs
